--- a/public/themes/simpleboot3/public/assets/style/css/index.css
+++ b/public/themes/simpleboot3/public/assets/style/css/index.css
@@ -29,6 +29,11 @@
 .index .index-banner-top .text{
 	font-size: 0.42rem;
 }
+.index-number{
+	width: 100%;
+	background: #fff;
+	border-bottom: solid 1px rgba(255, 80, 0, 0.2);
+}
 .index-number .item{
 	width: 100%;
 	text-align: center;
@@ -237,14 +242,17 @@
 	font-size: 0.25rem;
 	margin-top: 0.56rem;
 }
-.index-solution .index-solution-box .index-solution-box-right .flex-around div{
+.index-solution .index-solution-box .index-solution-box-right .flex-box{
+	flex-direction: row;
+}
+.index-solution .index-solution-box .index-solution-box-right .flex-box div{
 	width: calc(33.33% - 0.17rem);
 	height: 1.78rem;
 	border: solid 1px #FF5000;
 	margin-top: 0.35rem;
 	background: #FFFFFF;
 }
-.index-solution .index-solution-box .index-solution-box-right .flex-around div img{
+.index-solution .index-solution-box .index-solution-box-right .flex-box div img{
 	width: 100%;
 	height: 1.6rem;
 }
@@ -324,6 +332,11 @@
 	line-height: 0.53rem;
 	margin-bottom: 0.71rem;
 }
+.index-history .index-history-box .index-history-box-left .time-line{
+	background: #ff5000;
+	overflow: auto;
+	height: 4.64rem;
+}
 .index-history .index-history-box .index-history-box-left .history-box{
 	margin-left: 0.44rem;
 	border-left: 1px #ffffff dashed;
@@ -351,11 +364,11 @@
 .index-history .index-history-box .index-history-box-left .history-box li .name{
 	color: #FFFFFF;
 	font-size: 0.25rem;
-	line-height: 0.5rem;
+	line-height: 2;
 	margin-left: 0.35rem;
 }
 .index-history .index-history-box .index-history-box-left .history-box li .name div{
-	line-height: 0.53rem;
+	line-height: 2;
 }
 .index-history .index-history-box .index-history-box-right{
 	width: calc(70% - 50px);
@@ -383,6 +396,7 @@
 	display: flex;
 	justify-content: space-around;
 	margin-bottom: 0.53rem;
+	margin-top: 1.1rem;
 }
 .index-advantage .index-advantage-box .index-advantage-box-top .item{
 	background: #FFFFFF;
@@ -557,6 +571,8 @@
 	display: flex;
 	justify-content: space-around;
 	flex-wrap: wrap;
+	height: 3.79rem;
+	overflow: hidden;
 }
 .index-customer .index-customer-box div{
 	width: calc(16.667% - 10px);
@@ -620,6 +636,10 @@
 	.index .index-banner-top .text{
 		font-size: 1.2rem;
 	}
+	.index-number{
+		background: url(../imgs/index/number-bg.png) center center no-repeat;
+		background-size: 100% 100%;
+	}
 	.index-number .item{
 		margin:2rem 0;
 		border-right: none;
@@ -673,6 +693,246 @@
 	}
 	.index-solution{
 		padding: 2rem 1rem;
+		background: #FAFAFA;
+	}
+	.index-solution .index-solution-box .flex-box{
+		flex-direction: column;
+	}
+	.index-solution .index-solution-box .index-solution-box-left{
+		width: 100%;
+	}
+	.index-solution .index-solution-box .index-solution-box-left li .icon{
+		width: 1.06rem;
+		height: 1.06rem;
+	}
+	.index-solution .index-solution-box .index-solution-box-left li .title{
+		color: #666666;
+		font-size: 1rem;
+	}
+	.index-solution .index-solution-box .index-solution-box-left li .text{
+		font-size: 0.86rem;
+		padding: 1.33rem 0;
+	}
+	.index-solution .index-solution-box .index-solution-box-left li.active .icon{
+		height: 7rem;
+	}
+	.index-solution .index-solution-box .index-solution-box-left li{
+		padding: 1.33rem 0 0;
+	}
+	.index-solution .index-solution-box .index-solution-box-left li.active .title{
+		color: #333333;
+		font-size: 1.06rem;
+		padding: 0.66rem 0;
+	}
+	.index-solution .index-solution-box .index-solution-box-left li .content{
+		padding: 0 0.5rem;
+	}
+	.index-solution .index-solution-box .index-solution-box-right{
+		width: 100%;
+		margin-top: 2rem;
+	}
+	.index-solution .index-solution-box .index-solution-box-right .text{
+		font-size: 0.86rem;
+		line-height: 1.6rem;
+	}
+	.index-solution .index-solution-box .index-solution-box-right .company-name{
+		font-size: 0.93rem;
+		margin-top: 2.8rem;
+	}
+	.index-solution .index-solution-box .index-solution-box-right .flex-box div{
+		margin-top: 1.33rem;
+		width: calc(33.33% - 5px);
+		height: 2.66rem;
+	}
+	.index-solution .index-solution-box .index-solution-box-right .flex-box div img{
+		height: calc(100% - 1px);
+	}
+	.index-solution .index-solution-box .index-solution-box-left-bottom .flex-around{
+		flex-wrap: wrap;
+	}
+	.index-solution .index-solution-box .index-solution-box-left-bottom .item{
+		width: 33.33%;
+		flex: auto;
+		padding-top:2rem;
+		padding-bottom: 3.33rem;
+	}
+	.index-solution .index-solution-box .index-solution-box-left-bottom .item .img-logo{
+		width: 2rem;
+		height: 2rem;
+	}
+	.index-solution .index-solution-box .index-solution-box-left-bottom .item .text{
+		color: #999999;
+		font-size: 0.93rem;
+		margin-top: 1.33rem;
+	}
+	.index-solution .index-solution-box .index-solution-box-left-bottom .item .img-logo img{
+		filter: grayscale(0);
+		opacity: 1;
+	}
+	.index-history .index-history-box .flex-around{
+		flex-direction: column;
+		margin-top: 2rem;
+	}
+	.index-history .index-history-box .index-history-box-left{
+		width: 100%;
+	}
+	.index-history .index-history-box .index-history-box-left .text{
+		font-size: 0.86rem;
+		line-height: 1.6rem;
+		text-align: justify;
+		padding: 0 10px;
+	}
+	.index-history .index-history-box .index-history-box-left .time-line{
+		height: 21.6rem;
+	}
+	.index-history .index-history-box .index-history-box-left .history-box{
+		margin-left: 1rem;
+		padding:2rem 0;
+	}
+	.index-history .index-history-box .index-history-box-left .history-box li{
+		margin-bottom: 1.5rem;
+	}
+	.index-history .index-history-box .index-history-box-left .history-box li .circular{
+		width: 0.93rem;
+		height: 0.93rem;
+		margin-left:-0.46rem;
+	}
+	.index-history .index-history-box .index-history-box-left .history-box li .name{
+		font-size: 0.86rem;
+		margin-left: 1rem;
+		color: rgba(255, 255, 255, 0.8);
+	}
+	.index-history .index-history-box .index-history-box-left .history-box li.active .name{
+		font-size: 1.6rem;
+	}
+	.index-history .index-history-box .index-history-box-right{
+		width: 100%;
+	}
+	.index-history .index-history-box .index-history-box-right .history-img{
+		width: 100%;
+	}
+	.index-history .index-history-box .index-history-box-right .history-img img{
+		height: 17.46rem;
+	}
+	.index-advantage{
+		background: #FAFAFA;
+		padding: 1.85rem 0 0;
+	}
+	.index-advantage .index-advantage-box{
+		width: calc(100% - 20px);
+		margin: 0 auto;
+		display: flex;
+	}
+	.index-advantage .index-advantage-box .index-advantage-box-top{
+		flex-direction: column;
+		margin-top: 2rem;
+	}
+	.index-advantage .index-advantage-bottom{
+		border-top: none;
+	}
+	.index-advantage .index-advantage-bottom .inner{
+		padding-left: 1.06rem;
+		margin-left: 0;
+	}
+	.index-advantage .index-advantage-box .index-advantage-box-top .item{
+		width: 9.33rem;
+		padding: 1.33rem;
+		margin-bottom: 0.66rem;
+	}
+	.index-advantage .index-advantage-box .index-advantage-box-top .item img{
+		width: 2rem;
+		height: 2rem;
+	}
+	.index-advantage .index-advantage-box .index-advantage-box-top{
+		font-size: 1.06rem;
+		line-height: 2rem;
+	}
+	.index-advantage .index-advantage-bottom .index-advantage-bottom-box{
+		flex-direction: column;
+		padding-top: 0;
+		padding-bottom: 0;
+		margin-top: 2rem;
+		border-left: solid 1px #FF5000;
+	}
+	.index-advantage .index-advantage-bottom .index-advantage-bottom-box .item{
+		width: 13rem;
+		font-size: 0.86rem;
+		line-height: 2;
+		background: transparent;
+		text-align: left;
+		height: 4.66rem;
+		margin-bottom: 0.66rem;
+		font-weight: bolder;
+		justify-content: flex-start;
+		padding-left: 1rem;
+	}
+	.index-advantage .index-advantage-bottom .index-advantage-bottom-box .item:last-child{
+		margin-bottom: 0;
+	}
+	.index-advantage .index-advantage-bottom .index-advantage-bottom-box .item img{
+		display: none;
+	}
+	.index-advantage .index-advantage-bottom .index-advantage-bottom-box .item .icon-img{
+		background: url(../imgs/index/icon-left.svg) 0 0 no-repeat;
+		background-size: 100% 100%;
+		top: calc(50% - 8px);
+		left: -15px;
+		/* display: block; */
+	}
+	.index-news .index-news-box{
+		flex-direction: column;
+		padding-top: 2rem;
+	}
+	.index-news .index-news-box .item{
+		position: relative;
+		margin-right: 0;
+		padding-bottom: 0;
+		margin-bottom: 0.66rem;
+	}
+	.index-news .index-news-box .item .title-bigger{
+		display: none!important;
+	}
+	.index-news .index-news-box .item .title{
+		display: block!important;
+		font-size: 0.86rem;
+		padding: 1.33rem;
+		height: auto;
+		line-height: 1.33rem;
+	}
+	.index-news .index-news-box .item .time{
+		padding: 1.33rem;
+		font-size: 0.93rem;
+	}
+	.index-news .index-news-box .item .more-btn{
+		position: absolute;
+		bottom: 1.6rem;
+		right: 1.33rem;
+		width: 0.93rem;
+		height: 0.93rem;
+		line-height: 0.93rem;
+		font-size: 0.93rem;
+	}
+	.index-customer .index-customer-box{
+		margin-top: 2rem;
+		height: 8.13rem;
+		overflow: hidden;
+	}
+	.index-customer .index-customer-box div{
+		width: calc(33.33% - 7.5px);
+		height: 3.73rem;
+		margin-bottom:0.66rem;
+	}
+	.index-customer .index-customer-box div img{
+		height: 3.73rem;
+	}
+	.index-customer .more{
+		font-size: 0.93rem;
+	}
+	.index-bottom .solution-btn{
+		width: 23rem;
+		height: 3.6rem;
+		line-height: 3.6rem;
+		font-size: 0.93rem;
 	}
 }
 
