--- a/public/themes/simpleboot3/public/assets/style/css/product.css
+++ b/public/themes/simpleboot3/public/assets/style/css/product.css
@@ -56,6 +56,7 @@
 }
 
 .problem .list {
+	width: 100%;
     margin-top: 1.428571rem;
     display: flex;
     justify-content: space-between;
@@ -152,3 +153,149 @@
 	margin-right: 0.18rem;
 	color: rgba(255, 255, 255, 1);
 }
+/* 我们的优势 */
+.ouradvantage{
+	background-image: url(../imgs/solution/resolve3.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+.ouradvantage_content{
+	padding: 1.785714rem 4.375rem 1.785714rem 4.375rem;
+	background-color: rgba(250, 250, 250, 1);
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	opacity: 0.9;
+}
+.ouradvantage_content .title {
+    color: rgba(16, 16, 16, 1);
+    font-size: 0.571429rem;
+    text-align: center;
+    font-weight: bold;
+}
+
+.ouradvantage_content .tag {
+    margin-top: 0.357143rem;
+    color: rgba(153, 153, 153, 1);
+    font-size: 0.25rem;
+    text-align: center;
+}
+.ouradvantage_content .list {
+	width: 100%;
+    margin-top: 1.79rem;
+    display: flex;
+	justify-content: space-between;
+}
+
+.ouradvantage_content .list .item{
+	width: 6.25rem;
+	height: 3.93rem;
+	border-radius: 0.09rem;
+	background-color: rgba(255, 255, 255, 1);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.ouradvantage_content .list .item .item_first{
+	margin-top: -0.98rem;
+    width: 1.96rem;
+    height: 1.96rem;
+    line-height: 1.96rem;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 1);
+}
+.ouradvantage_content .list .item .item_first .item_first_content{
+	margin-left: 0.18rem;
+	margin-top: 0.18rem;
+    width: 1.61rem;
+    height: 1.61rem;
+    line-height: 1.61rem;
+    border-radius: 50%;
+    background-color: #FAFAFA;
+	text-align: center;
+}
+.item_first .item_first_content img{
+    width: 0.71rem;
+    height: 0.71rem;
+}
+.ouradvantage_content .list .item .item_title{
+	margin-top: 0.54rem;
+	color: rgba(51, 51, 51, 1);
+	font-size: 0.36rem;
+	text-align: center;
+	font-weight: bold;
+}
+.ouradvantage_content .list .item .item_des{
+	margin-top: 0.36rem;
+	color: rgba(153, 153, 153, 1);
+	font-size: 0.29rem;
+	text-align: center;
+}
+
+/* 我们的价值 */
+.ourvalue{
+	padding: 1.79rem 4.375rem 1.79rem 4.375rem;
+	background-color: #FFFFFF;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+.ourvalue .title {
+    color: rgba(16, 16, 16, 1);
+    font-size: 0.571429rem;
+    text-align: center;
+    font-weight: bold;
+}
+.ourvalue .tag {
+    margin-top: 0.357143rem;
+    color: rgba(153, 153, 153, 1);
+    font-size: 0.25rem;
+    text-align: center;
+}
+.ourvalue .list {
+	width: 100%;
+    margin-top: 1.79rem;
+    display: flex;
+	justify-content: space-between;
+}
+
+.ourvalue .list .item{
+	width: 6.25rem;
+	height: 6.11rem;
+	border-radius: 0.09rem;
+	background-color: #FAFAFA;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.ourvalue .list .item .item_first{
+	background-image: url(../imgs/solution/resolve3.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+	border-radius: 0.09rem 0.09rem 0 0;
+	width: 100%;
+    height: 2.86rem;
+}
+.ourvalue .list .item .item_first .item_first_content{
+	margin-top: 1.79rem;
+	width: 6.25rem;
+	height: 1.07rem;
+	line-height: 1.07rem;
+	background: linear-gradient(90.17deg, rgba(255,80,0,1) -0.15%,rgba(255,80,0,0.27) 99.55%);
+	text-align: center;
+}
+.item_first_content_text{
+	color: rgba(255, 255, 255, 1);
+	font-size: 0.36rem;
+	text-align: left;
+	margin-left: 0.45rem;
+}
+.ourvalue .list .item .item_des{
+	margin-top: 0.54rem;
+	width: 5.36rem;
+	color: rgba(102, 102, 102, 1);
+	font-size: 0.25rem;
+	text-align: justify;
+	line-height: 0.5rem;
+}
+
