--- a/public/themes/simpleboot3/public/assets/style/css/reset.css
+++ b/public/themes/simpleboot3/public/assets/style/css/reset.css
@@ -1,3 +1,18 @@
+/* 一般浏览器的不要太小，容易看不见 */
+.time-line::-webkit-scrollbar {
+    width: 4px;
+  }
+.time-line::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+    opacity: 0.2;
+    background: fade(@primary-color, 60%);
+  }
+.time-line::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+    border-radius: 0;
+    background: fade(@primary-color, 30%);
+  }
 .navbar {
     border-radius: 0;
     position: fixed;
