--- a/public/themes/simpleboot3/public/assets/style/css/index.css
+++ b/public/themes/simpleboot3/public/assets/style/css/index.css
@@ -966,7 +966,10 @@
 	/* 合作客户页面 */
 	.customer .index-banner-top{
 		margin-top: 50px;
+		background: url(../imgs/customer/banner-phone.png) center center no-repeat;
+		background-size: 100% 100%;
 	}
+	
 	.customer .index-banner-top .title{
 		font-size: 1.6rem;
 	}
