--- a/public/themes/simpleboot3/public/assets/style/css/common.css
+++ b/public/themes/simpleboot3/public/assets/style/css/common.css
@@ -69,7 +69,7 @@ body{
 }
 .header-box {
 	width: 100%;
-	line-height: 80px;
+	line-height: 1.42rem;
 	/* overflow: hidden; */
 	margin: 0 auto;
 }
@@ -104,11 +104,11 @@ body{
 .header-box .nav li{
 	padding: 0 20px;
 	font-size: 0.28rem;
-	line-height: 80px;
+	line-height: 1.42rem;
 	text-align: center;
 }
 .header-box .nav.navbar-nav{
-	height: 80px;
+	height: 1.42rem;
 	overflow: hidden;
 	/* width: 80%;
 	margin: 0 10%;
@@ -117,7 +117,7 @@ body{
 .header-box .nav li a{
 	color: #fff;
 	display: inline-block;
-	line-height: 0.6rem;
+	line-height: 1rem;
 }
 .header-box .nav li.active a,.header-box .nav li:hover a{
 	border-bottom: solid 2px #fff;
@@ -130,9 +130,10 @@ body{
 	font-size: 0.29rem;
 	font-family: "HarmonyOS_Sans_SC-regular";
 	color: #fff;
-	line-height: 80px;
+	line-height: 1.42rem;
 	text-align: right;
-	letter-spacing: 2px;
+	letter-spacing: 1px;
+	overflow: hidden;
 }
 .menu-dropdown{
     position: absolute;
@@ -541,6 +542,14 @@ body{
 	}
 	.footer .foot-phone-bottom a{
 		color: rgba(255, 255, 255, 0.4);
+	}
+}
+@media (max-width: 1300px) {
+	.header-box .header-icon-imgs{
+		display: none;
+	}
+	.header-box .num-phone{
+		display: none;
 	}
 }
 @media (-webkit-min-device-pixel-ratio: 1.5),(min-device-aspect-ratio: 1.5){
