--- a/public/themes/simpleboot3/public/assets/style/css/reset.css
+++ b/public/themes/simpleboot3/public/assets/style/css/reset.css
@@ -26,7 +26,7 @@
 	padding: 0 1rem;
     /* width: 100%; */
     background: #FF5000!important;
-    height: 80px;
+    height: 1.42rem;
     /* position: relative; */
 }
 
