--- a/public/themes/simpleboot3/public/assets/style/css/product.css
+++ b/public/themes/simpleboot3/public/assets/style/css/product.css
@@ -64,16 +64,14 @@
 
 .problem .list .item {
     display: flex;
-    width: 6.25rem;
-    height: 4.29rem;
+    width: 24%;
     border-radius: 0.09rem;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .problem .list .item .item_content {
-    width: 6.25rem;
-    height: 4.29rem;
+    width: 100%;
     opacity: 0.9;
     border-radius: 0.09rem;
     display: flex;
@@ -90,7 +88,7 @@
 }
 
 .problem .list .item_des {
-    width: 5.18rem;
+    width: 100%;
     margin-top: 1.07rem;
     line-height: 0.54rem;
     color: rgba(51, 51, 51, 1);
@@ -103,17 +101,21 @@
 	background-color: #FFFFFF;
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
 }
 .ourproduct_left{
-	flex: 1;
+	width: 45%;
 }
-.ourproduct img{
-	width: 12.14rem;
+.ourproduct_right{
+	width: 52%;
 	height: 12.14rem;
+}
+.ourproduct_right img{
+	width: 100%;
 }
 .ourproduct_left_text{
 	margin-top: 0.89rem;
-	width: 10.54rem;
+	width: 100%;
 	line-height: 0.54rem;
 	color: rgba(46, 46, 46, 1);
 	font-size: 0.25rem;
@@ -260,7 +262,7 @@
 }
 
 .ourvalue .list .item{
-	width: 6.25rem;
+	width: 24%;
 	height: 6.11rem;
 	border-radius: 0.09rem;
 	background-color: #FAFAFA;
@@ -278,7 +280,7 @@
 }
 .ourvalue .list .item .item_first .item_first_content{
 	margin-top: 1.79rem;
-	width: 6.25rem;
+	width: 100%;
 	height: 1.07rem;
 	line-height: 1.07rem;
 	background: linear-gradient(90.17deg, rgba(255,80,0,1) -0.15%,rgba(255,80,0,0.27) 99.55%);
@@ -292,7 +294,7 @@
 }
 .ourvalue .list .item .item_des{
 	margin-top: 0.54rem;
-	width: 5.36rem;
+	width: 100%;
 	color: rgba(102, 102, 102, 1);
 	font-size: 0.25rem;
 	text-align: justify;
@@ -329,4 +331,340 @@
 	color: rgba(255, 255, 255, 1);
 	font-size: 0.25rem;
 	border: 0;
+}
+@media (max-width : 425px) {
+	.product .banner {
+	    width: 100%;
+	    height: 12.5rem;
+	    background-image: url(../imgs/product/banner.png);
+	    background-repeat: no-repeat;
+	    background-size: cover;
+	    overflow: hidden;
+	    position: relative;
+	    display: flex;
+	    flex-direction: column;
+	}
+	
+	.product_banner_text_one {
+	    margin-top: 3.928571rem;
+	    margin-left: 4.375rem;
+	    color: rgba(255, 255, 255, 1);
+	    font-size: 1.2rem;
+	    text-align: left;
+	    font-weight: bold;
+	}
+	
+	.product_banner_text_two {
+	    margin-top: 0.892857rem;
+	    margin-left: 4.375rem;
+	    width: 12.5rem;
+	    line-height: 1.25rem;
+	    color: rgba(255, 255, 255, 1);
+	    font-size: 0.93rem;
+	}
+	
+	/* 客户的难题 */
+	.product .problem {
+	    padding: 1.25rem 0.63rem 1.25rem 0.63rem;
+	    background-color: #FAFAFA;
+	    display: flex;
+	    align-items: center;
+	    flex-direction: column;
+	}
+	
+	.problem .title {
+	    color: rgba(16, 16, 16, 1);
+	    font-size: 1.13rem;
+	    text-align: center;
+	    font-weight: bold;
+	}
+	
+	.problem .tag {
+	    margin-top: 0.357143rem;
+	    color: rgba(153, 153, 153, 1);
+	    font-size: 0.75rem;
+	    text-align: center;
+	}
+	
+	.problem .list {
+		width: 100%;
+	    margin-top: 1.428571rem;
+	    display: flex;
+	    justify-content: space-between;
+	}
+	
+	.problem .list .item {
+	    display: flex;
+	    width: 24%;
+	    border-radius: 0.09rem;
+	    background-repeat: no-repeat;
+	    background-size: cover;
+	}
+	
+	.problem .list .item .item_content {
+	    width: 100%;
+	    opacity: 0.9;
+	    border-radius: 0.09rem;
+	    display: flex;
+	    flex-direction: column;
+	    background-color: rgba(250, 250, 250, 1);
+	    padding: 0.89rem 0.54rem 0.71rem 0.54rem;
+	}
+	
+	.problem .list .item_title {
+	    color: rgba(255, 80, 0, 1);
+	    font-size: 0.88rem;
+	    text-align: left;
+	    font-weight: bold;
+	}
+	
+	.problem .list .item_des {
+	    width: 100%;
+	    margin-top: 1.07rem;
+	    line-height: 0.88rem;
+	    color: rgba(51, 51, 51, 1);
+	    font-size: 0.75rem;
+	    text-align: justify;
+	}
+	/* 我们的产品 */
+	.ourproduct{
+		padding: 1.25rem 0.63rem 1.25rem 0.63rem;
+		background-color: #FFFFFF;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+	.ourproduct_left{
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.ourproduct_right{
+		display: none;
+	}
+	.ourproduct_right img{
+		width: 100%;
+	}
+	.ourproduct_left_text{
+		margin-top: 0.89rem;
+		width: 100%;
+		line-height: 0.88rem;
+		color: rgba(46, 46, 46, 1);
+		font-size: 0.75rem;
+		text-align: justify;
+	}
+	.ourproduct_left_title {
+	    color: rgba(16, 16, 16, 1);
+	    font-size: 1.13rem;
+	    text-align: left;
+	    font-weight: bold;
+	}
+	
+	.ourproduct_left_tag {
+	    margin-top: 0.36rem;
+	    color: rgba(153, 153, 153, 1);
+	    font-size: 0.75rem;
+	    text-align: left;
+	}
+	.ourproduct button{
+		margin-top: 1.79rem;
+		width: 6.25rem;
+		height: 1.76rem;
+		line-height: 1.76rem;
+		border-radius: 0.31rem;
+		background-color: rgba(255, 80, 0, 1);
+		text-align: center;
+		color: rgba(255, 255, 255, 1);
+		font-size: 0.25rem;
+		border: 0;
+		display: flex;
+		align-items: center;
+	}
+	.ourproduct button img{
+		margin-left: 0.6rem;
+		width: 1rem;
+		height: 1rem;
+		margin-right: 0.18rem;
+		color: rgba(255, 255, 255, 1);
+	}
+	/* 我们的优势 */
+	.ouradvantage{
+		background-image: url(../imgs/solution/resolve3.png);
+		background-repeat: no-repeat;
+		background-size: cover;
+	}
+	.ouradvantage_content{
+		padding: 1.25rem 0.63rem 1.25rem 0.63rem;
+		background-color: rgba(250, 250, 250, 1);
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		opacity: 0.9;
+	}
+	.ouradvantage_content .title {
+	    color: rgba(16, 16, 16, 1);
+	    font-size: 1.13rem;
+	    text-align: center;
+	    font-weight: bold;
+	}
+	
+	.ouradvantage_content .tag {
+	    margin-top: 0.357143rem;
+	    color: rgba(153, 153, 153, 1);
+	    font-size: 0.75rem;
+	    text-align: center;
+	}
+	.ouradvantage_content .list {
+		width: 100%;
+	    margin-top: 1.79rem;
+	    display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
+	
+	.ouradvantage_content .list .item{
+		width: 48%;
+		height: 8rem;
+		border-radius: 0.25rem;
+		background-color: rgba(255, 255, 255, 1);
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin-bottom: 1.25rem;
+	}
+	.ouradvantage_content .list .item .item_first{
+		margin-top: -0.98rem;
+	    width: 1.96rem;
+	    height: 1.96rem;
+	    line-height: 1.96rem;
+	    border-radius: 50%;
+	    background-color: rgba(255, 255, 255, 1);
+	}
+	.ouradvantage_content .list .item .item_first .item_first_content{
+		margin-left: 0.18rem;
+		margin-top: 0.18rem;
+	    width: 1.61rem;
+	    height: 1.61rem;
+	    line-height: 1.61rem;
+	    border-radius: 50%;
+	    background-color: #FAFAFA;
+		text-align: center;
+	}
+	.item_first .item_first_content img{
+	    width: 0.71rem;
+	    height: 0.71rem;
+	}
+	.ouradvantage_content .list .item .item_title{
+		margin-top: 0.54rem;
+		color: rgba(51, 51, 51, 1);
+		font-size: 0.88rem;
+		text-align: center;
+		font-weight: bold;
+	}
+	.ouradvantage_content .list .item .item_des{
+		margin-top: 0.36rem;
+		color: rgba(153, 153, 153, 1);
+		font-size: 0.75rem;
+		text-align: center;
+	}
+	
+	/* 我们的价值 */
+	.ourvalue{
+		padding: 1.25rem 0.63rem 1.25rem 0.63rem;
+		background-color: #FFFFFF;
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+	}
+	.ourvalue .title {
+	    color: rgba(16, 16, 16, 1);
+	    font-size: 1.13rem;
+	    text-align: center;
+	    font-weight: bold;
+	}
+	.ourvalue .tag {
+	    margin-top: 0.357143rem;
+	    color: rgba(153, 153, 153, 1);
+	    font-size: 0.75rem;
+	    text-align: center;
+	}
+	.ourvalue .list {
+		width: 100%;
+	    margin-top: 1.79rem;
+	    display: flex;
+		justify-content: space-between;
+	}
+	
+	.ourvalue .list .item{
+		width: 24%;
+		height: 17rem;
+		border-radius: 0.09rem;
+		background-color: #FAFAFA;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.ourvalue .list .item .item_first{
+		background-image: url(../imgs/solution/resolve3.png);
+		background-repeat: no-repeat;
+		background-size: cover;
+		border-radius: 0.09rem 0.09rem 0 0;
+		width: 100%;
+	    height: 4.00rem;
+	}
+	.ourvalue .list .item .item_first .item_first_content{
+		margin-top: 2.9rem;
+		width: 100%;
+		height: 1.07rem;
+		line-height: 1.07rem;
+		background: linear-gradient(90.17deg, rgba(255,80,0,1) -0.15%,rgba(255,80,0,0.27) 99.55%);
+		text-align: center;
+	}
+	.item_first_content_text{
+		color: rgba(255, 255, 255, 1);
+		font-size: 0.75rem;
+		text-align: left;
+		margin-left: 0.45rem;
+	}
+	.ourvalue .list .item .item_des{
+		margin-top: 0.54rem;
+		width: 100%;
+		color: rgba(102, 102, 102, 1);
+		font-size: 0.75rem;
+		text-align: justify;
+		line-height: 1.25rem;
+	}
+	/* 以人为本 */
+	.getresolve{
+		padding: 1.25rem 0.63rem 1.25rem 0.63rem;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		background-color: #FFFFFF
+	}
+	.getresolve .title {
+	    color: rgba(16, 16, 16, 1);
+	    font-size: 1.13rem;
+	    text-align: center;
+	    font-weight: bold;
+	}
+	.getresolve .tag {
+	    margin-top: 0.357143rem;
+	    color: rgba(153, 153, 153, 1);
+	    font-size: 0.75rem;
+	    text-align: center;
+	}
+	.getresolve button{
+		margin-top: 1.43rem;
+		width: 7.2rem;
+		height: 1.76rem;
+		line-height: 1.76rem;
+		border-radius: 0.25rem;
+		background-color: rgba(255, 80, 0, 1);
+		text-align: center;
+		color: rgba(255, 255, 255, 1);
+		font-size: 0.75rem;
+		border: 0;
+	}
 }
