--- a/public/themes/simpleboot3/public/assets/style/css/solution.css
+++ b/public/themes/simpleboot3/public/assets/style/css/solution.css
@@ -325,6 +325,7 @@
 .solution_customer .list img{
 	width: 4.107143rem;
 	height: 1.785714rem;
+	margin-bottom: 0.09rem;
 }
 .solution_customer .next{
 	color: rgba(255, 80, 0, 1);
@@ -574,7 +575,7 @@
 	.resolve_left{
 		display: flex;
 		flex-direction: column;
-		flex: 1;
+		align-items: center;
 	}
 	.resolve_left_title{
 		color: rgba(26, 26, 26, 1);
@@ -601,9 +602,7 @@
 		border: 0;
 	}
 	.resolve_right{
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
+		display: none;
 	}
 	.resolve_right_item{
 		background-repeat: no-repeat;
