--- a/public/themes/simpleboot3/public/assets/style/css/index.css
+++ b/public/themes/simpleboot3/public/assets/style/css/index.css
@@ -1036,13 +1036,14 @@
 	width: 8.39rem;
 	height: 8.75rem;
 	background: #3DB52C;
+	border-radius: 5px;
 }
 .application .application-box .box-1 img{
 	display: block;
 	padding: 0.35rem;
 }
-.application .application-box .box-1 div{
-	/* padding: 0 0.35rem; */
+.application .application-box .box-1 .flex-box{
+	padding: 0 0.35rem;
 	color: #FFFFFF;
 	font-size: 0.32rem;
 	line-height: 0.85rem;
@@ -1051,6 +1052,77 @@
 .application .application-box .box-1 a{
 	font-size: 0.25rem;
 	font-weight: normal;
+}
+.application .application-box .box-2{
+	width: 16.78rem;
+	height: 8.75rem;
+	background: #F5F5F5;
+	border-radius: 5px;
+}
+.application .application-box .box-2 .left{
+	padding: 0.71rem 0 0.71rem 0.71rem;
+	text-align: center;
+	color: #333333;
+	font-size: 0.32rem;
+}
+.application .application-box .box-2 .left img{
+	width: 7.32rem;
+	height: 6.91rem;
+	margin-bottom: 0.35rem;
+}
+.application .application-box .box-2 .right{
+	padding: 2.73rem 1.42rem 0.71rem 0;
+	display: flex;
+}
+.application .application-box .box-2 .right .item{
+	width: 2.67rem;
+	text-align: center;
+	margin-left: 0.89rem;
+	color: #333333;
+	font-size: 0.25rem;
+}
+.application .application-box .box-2 .right .item img{
+	display: block;
+	width: 2.67rem;
+	height: 2.67rem;
+	margin-bottom: 0.35rem;
+}
+.application .application-box .box-3{
+	width: 8.39rem;
+	height: 8.75rem;
+	background: #f5f5f5;
+	border-radius: 5px;
+}
+.application .application-box .box-3 img{
+	display: block;
+	padding: 0.35rem;
+}
+.application .application-box .box-3 .flex-box{
+	padding: 0 0.35rem;
+	color: #333333;
+	font-size: 0.32rem;
+	line-height: 0.85rem;
+	font-weight: bolder;
+}
+.application .application-box .box-3 a{
+	font-size: 0.25rem;
+	font-weight: normal;
+	color: #333333;
+}
+.application .application-box .inner>.flex-box:not(:last-child){
+	margin-bottom: 0.35rem;
+}
+.application .application-box .box-2 .right .item a{
+	display: block;
+	width: 2.67rem;
+	height: 0.96rem;
+	line-height: 0.96rem;
+	text-align: center;
+	margin: 0.71rem auto 0;
+	background: #129CFE;
+	color: #FFFFFF;
+	font-size: 0.25rem;
+	border-radius: 5px;
 }
 
 
@@ -1414,6 +1486,96 @@
 	.customer .customer-list .customer-list-box div{
 		width: calc(50% - 4px);
 		margin-bottom: 0.6rem;
+	}
+	
+	
+	/* 企业应用页面 */
+	.application .index-banner-top{
+		margin-top: 50px;
+		background: url(../imgs/application/banner-phone.png) center center no-repeat;
+		background-size: 100% 100%;
+	}
+	.application .application-box{
+		padding: 0;
+	}
+	.application .inner{
+		width: 100%;
+	}
+	.application .inner>.flex-box{
+		display: block;
+	}
+	.application .application-box .box-1{
+		width: calc(100% - 20px);
+		margin: 1rem auto 2rem;
+		height: 24.06rem;
+	}
+	.application .application-box .box-1 img{
+		padding: 1rem;
+		width: 100%;
+	}
+	.application .application-box .box-1 .flex-box{
+		padding: 0 1rem;
+		font-size: 1.06rem;
+		line-height: 2rem;
+	}
+	.application .application-box .box-1 a{
+		font-size: 0.86rem;
+	}
+	.application .application-box .box-2{
+		width: 100%;
+		height: auto;
+	}
+	.application .application-box .box-2>.flex-box{
+		display: block;
+	}
+	.application .application-box .box-2 .left{
+		padding: 2rem 1rem 1rem;
+		font-size: 1.06rem;
+		font-weight: bolder;
+	}
+	.application .application-box .box-2 .left img{
+		width: 100%;
+		height: auto;
+		margin-bottom: 1.33rem;
+	}
+	.application .application-box .box-2 .right{
+		padding: 1rem 1rem 2rem 1rem;
+		justify-content: space-around;
+	}
+	.application .application-box .box-2 .right .item{
+		width: 10rem;
+		margin-left: 0;
+		font-size: 0.86rem;
+	}
+	.application .application-box .box-2 .right .item img{
+		width: 10rem;
+		height: 10rem;
+		margin-bottom: 1.33rem;
+	}
+	.application .application-box .box-3{
+		width: 100%;
+		height: auto;
+		background: #FFFFFF;
+	}
+	.application .application-box .box-3 img{
+		padding: 4.33rem 1rem 1rem 1rem;
+		width: 100%;
+	}
+	.application .application-box .inner>.flex-box{
+		margin-bottom: 0!important;
+	}
+	.application .application-box .box-3 .flex-box{
+		padding: 1.33rem 1rem;
+		font-size: 1.06rem;
+	}
+	.application .application-box .box-3 a{
+		font-size: 0.86rem;
+	}
+	.application .application-box .box-2 .right .item a{
+		width: 10rem;
+		height: 3.33rem;
+		line-height: 3.33rem;
+		font-size: 0.93rem;
 	}
 }
 
